Declaring and linking : header, sidenav and sub-header

--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 	<head>
 		<title>Glorify</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel="stylesheet" type="text/css" href="css/sidenav.css">
+		<link rel="stylesheet" type="text/css" href="css/header.css">
+		<link rel="stylesheet" type="text/css" href="css/sub-head.css">
 	</head>
 	<body>
-
+		<div id="sidenav"></div>
+		<div id="header"></div>
+		<div id="sub-head-one" class="sub-head"></div>
+		<div id="sub-head-two" class="sub-head"></div>
+		<div id="sub-head-three" class="sub-head"></div>
 	<script src="js/script.js"></script>
 	</body>
 </html>
